feature engineer data

--- a/dev/sepsis_prediction.ipynb
+++ b/dev/sepsis_prediction.ipynb
@@ -1255,6 +1255,165 @@
     "\n",
     "#### Split dataset for training"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into X(features) and y(target)\n",
+    "X = df.drop(columns=[\"Sepssis\",\"BMI_Category\",\"BP_Category\"],axis=1)\n",
+    "y = df[\"Sepssis\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FeatureEngineeringTransformer(BaseEstimator,TransformerMixin):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def fit(self,X,y=None):\n",
+    "        return self\n",
+    "        \n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        X = X.copy()\n",
+    "        X[\"BMI_Category\"] = pd.cut(X[\"Body_Mass_Index\"],bins=[0,18.5,24.9,29.5,float(\"inf\")],\n",
+    "                            labels=[\"Underweight\",\"Normal\",\"Overweight\",\"Obese\"]).astype(\"object\")\n",
+    "        X[\"BP_Category\"] = pd.cut(X[\"Blood_Pressure\"],bins=[0,120,129,139,float(\"inf\")],\n",
+    "                            labels=[\"Normal\",\"Prehypertension\",\"Hypertension Stage 1\",\"Hypertension Stage 2\",]).astype(\"object\")\n",
+    "        \n",
+    "        X[\"Age_Group\"] = pd.cut(X[\"Age\"],bins=[0,18,30,65,float(\"inf\")],\n",
+    "                            labels=[\"Younger Age\",\"Adults\",\"Older People\",\"Senior Citizens\"]).astype(\"object\")\n",
+    "        return X\n",
+    "    \n",
+    "# Instantiate the transformer\n",
+    "feature_engineering = FeatureEngineeringTransformer()\n",
+    "X_transformed = feature_engineering.fit_transform(X)\n",
+    "# Drop the original Age column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train Test Split & Encode Target Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,y_train,y_test = train_test_split(X_transformed,y,test_size=0.2,random_state=42,stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of trraining dataset: (479, 12)\n",
+      "Size of test dataset: (120, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the shape of the train test dataset\n",
+    "print(f\"Size of trraining dataset: {X_train.shape}\")\n",
+    "\n",
+    "print(f\"Size of test dataset: {X_test.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode the target variable\n",
+    "encoder = LabelEncoder()\n",
+    "y_train_encoded = encoder.fit_transform(y_train)\n",
+    "y_test_encoded = encoder.fit_transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Preprocessor Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([], dtype='object')"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_features = X.select_dtypes(include=\"number\").columns\n",
+    "categorical_features = X.select_dtypes(include=\"object\").columns\n",
+    "categorical_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pipeline With The Categorical Features\n",
+    "num_pipeline = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"num_imputer\",SimpleImputer(strategy=\"median\")),\n",
+    "        (\"log_transformer\",FunctionTransformer(np.log1p)),\n",
+    "        (\"num_scaler\", StandardScaler())\n",
+    "       \n",
+    "    ]\n",
+    ") \n",
+    "\n",
+    "cat_pipeline = Pipeline (\n",
+    "    steps=[\n",
+    "        (\"feature_engineering\",FeatureEngineeringTransformer()),\n",
+    "        (\"cat_imputer\",SimpleImputer(strategy=\"most_frequent\")),\n",
+    "        (\"cat_encoder\",OneHotEncoder(handle_unknown=\"ignore\"))\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"numerical_pipeline\",num_pipeline,numerical_features),\n",
+    "        (\"categorical_pipeline\",cat_pipeline,categorical_features)\n",
+    "]\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
