train on imbalanced data

--- a/dev/sepsis_prediction.ipynb
+++ b/dev/sepsis_prediction.ipynb
@@ -1414,6 +1414,312 @@
     "]\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modeling and Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a list of models to use\n",
+    "models = [\n",
+    "    (\"log_regression\",LogisticRegression(random_state=42)),\n",
+    "    (\"random_forest\",RandomForestClassifier(random_state=42)),\n",
+    "    (\"xgb_classifier\",XGBClassifier()),\n",
+    "    (\"gradient_boost\",GradientBoostingClassifier(random_state=42))\n",
+    "     \n",
+    "    \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training With Unbalanced Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1_score</th>\n",
+       "      <th>conf_matrix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>xgb_classifier</td>\n",
+       "      <td>0.716667</td>\n",
+       "      <td>0.716667</td>\n",
+       "      <td>0.716667</td>\n",
+       "      <td>0.716667</td>\n",
+       "      <td>[[61, 17], [17, 25]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gradient_boost</td>\n",
+       "      <td>0.716667</td>\n",
+       "      <td>0.711232</td>\n",
+       "      <td>0.716667</td>\n",
+       "      <td>0.713125</td>\n",
+       "      <td>[[63, 15], [19, 23]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>log_regression</td>\n",
+       "      <td>0.708333</td>\n",
+       "      <td>0.703941</td>\n",
+       "      <td>0.708333</td>\n",
+       "      <td>0.705684</td>\n",
+       "      <td>[[62, 16], [19, 23]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>random_forest</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.696875</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.698240</td>\n",
+       "      <td>[[61, 17], [19, 23]]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       model_name  accuracy  precision    recall  f1_score  \\\n",
+       "2  xgb_classifier  0.716667   0.716667  0.716667  0.716667   \n",
+       "3  gradient_boost  0.716667   0.711232  0.716667  0.713125   \n",
+       "0  log_regression  0.708333   0.703941  0.708333  0.705684   \n",
+       "1   random_forest  0.700000   0.696875  0.700000  0.698240   \n",
+       "\n",
+       "            conf_matrix  \n",
+       "2  [[61, 17], [17, 25]]  \n",
+       "3  [[63, 15], [19, 23]]  \n",
+       "0  [[62, 16], [19, 23]]  \n",
+       "1  [[61, 17], [19, 23]]  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics_table = pd.DataFrame(columns=[\"model_name\",\"accuracy\",\"precision\",\"recall\",\"f1_score\",\"conf_matrix\"])\n",
+    "all_pipelines = {}\n",
+    "\n",
+    "# Loop through the models and get the scores\n",
+    "for model_name, classifier in models:\n",
+    "    pipeline = Pipeline(\n",
+    "        steps=[\n",
+    "        ('preprocessor',preprocessor),\n",
+    "        ('feature_importance',SelectKBest(mutual_info_classif,k=\"all\")),\n",
+    "        ('classifier',classifier)\n",
+    "        ]\n",
+    "    )\n",
+    "    # fit train data on pipeline\n",
+    "    pipeline.fit(X_train,y_train_encoded)\n",
+    "\n",
+    "    # predict on test data\n",
+    "    y_pred = pipeline.predict(X_test)\n",
+    "\n",
+    "    # store classification report value in a dictionary\n",
+    "    metrics = classification_report(y_test_encoded,y_pred,output_dict=True)\n",
+    "\n",
+    "    # compute the confusion matrix\n",
+    "    conf_matrix = confusion_matrix(y_test_encoded,y_pred)\n",
+    "\n",
+    "    # save individual pipeline to the all pipelines dictionary\n",
+    "    all_pipelines[model_name] = pipeline\n",
+    "\n",
+    "      # Grab values from unbalanced metric table\n",
+    "    accuracy = metrics[\"accuracy\"]\n",
+    "    precision = metrics[\"weighted avg\"][\"precision\"]\n",
+    "    recall = metrics[\"weighted avg\"][\"recall\"]\n",
+    "    f1_score = metrics[\"weighted avg\"][\"f1-score\"]\n",
+    "\n",
+    "    # Grab all the metrics and add them to the metrics table\n",
+    "    metrics_table.loc[len(metrics_table)] = [model_name,accuracy,precision,recall,f1_score,conf_matrix]\n",
+    "\n",
+    "# Sort metrics based on F1-score\n",
+    "metrics_df = metrics_table.sort_values(by=\"f1_score\",ascending=False)\n",
+    "metrics_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1_score</th>\n",
+       "      <th>conf_matrix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>random_forest</td>\n",
+       "      <td>0.733333</td>\n",
+       "      <td>0.744097</td>\n",
+       "      <td>0.733333</td>\n",
+       "      <td>0.736889</td>\n",
+       "      <td>[[59, 19], [13, 29]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gradient_boost</td>\n",
+       "      <td>0.708333</td>\n",
+       "      <td>0.717502</td>\n",
+       "      <td>0.708333</td>\n",
+       "      <td>0.711697</td>\n",
+       "      <td>[[58, 20], [15, 27]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>log_regression</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.726263</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.706250</td>\n",
+       "      <td>[[54, 24], [12, 30]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>xgb_classifier</td>\n",
+       "      <td>0.691667</td>\n",
+       "      <td>0.697111</td>\n",
+       "      <td>0.691667</td>\n",
+       "      <td>0.693960</td>\n",
+       "      <td>[[58, 20], [17, 25]]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       model_name  accuracy  precision    recall  f1_score  \\\n",
+       "1   random_forest  0.733333   0.744097  0.733333  0.736889   \n",
+       "3  gradient_boost  0.708333   0.717502  0.708333  0.711697   \n",
+       "0  log_regression  0.700000   0.726263  0.700000  0.706250   \n",
+       "2  xgb_classifier  0.691667   0.697111  0.691667  0.693960   \n",
+       "\n",
+       "            conf_matrix  \n",
+       "1  [[59, 19], [13, 29]]  \n",
+       "3  [[58, 20], [15, 27]]  \n",
+       "0  [[54, 24], [12, 30]]  \n",
+       "2  [[58, 20], [17, 25]]  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balanced_metrics_table = pd.DataFrame(columns=[\"model_name\",\"accuracy\",\"precision\",\"recall\",\"f1_score\",\"conf_matrix\"])\n",
+    "balanced_pipelines = {}\n",
+    "\n",
+    "# Loop through the models and get the scores\n",
+    "for model_name, classifier in models:\n",
+    "    pipeline = ImbPipeline(\n",
+    "        steps=[\n",
+    "        ('preprocessor',preprocessor),\n",
+    "        ('smote',SMOTE(sampling_strategy=\"auto\")),\n",
+    "        ('feature_importance',SelectKBest(mutual_info_classif,k=\"all\")),\n",
+    "        ('classifier',classifier)\n",
+    "        ]\n",
+    "    )\n",
+    "    # fit train data on pipeline\n",
+    "    pipeline.fit(X_train,y_train_encoded)\n",
+    "\n",
+    "    # predict on test data\n",
+    "    y_pred = pipeline.predict(X_test)\n",
+    "\n",
+    "    # store classification report value in a dictionary\n",
+    "    balanced_metrics = classification_report(y_test_encoded,y_pred,output_dict=True)\n",
+    "\n",
+    "    # compute the confusion matrix\n",
+    "    conf_matrix = confusion_matrix(y_test_encoded,y_pred)\n",
+    "\n",
+    "    # save individual pipeline to the all pipelines dictionary\n",
+    "    balanced_pipelines[model_name] = pipeline\n",
+    "\n",
+    "      # Grab values from unbalanced metric table\n",
+    "    accuracy = balanced_metrics[\"accuracy\"]\n",
+    "    precision = balanced_metrics[\"weighted avg\"][\"precision\"]\n",
+    "    recall = balanced_metrics[\"weighted avg\"][\"recall\"]\n",
+    "    f1_score = balanced_metrics[\"weighted avg\"][\"f1-score\"]\n",
+    "\n",
+    "    # Grab all the metrics and add them to the metrics table\n",
+    "    balanced_metrics_table.loc[len(balanced_metrics_table)] = [model_name,accuracy,precision,recall,f1_score,conf_matrix]\n",
+    "\n",
+    "# Sort metrics based on F1-score\n",
+    "balanced_metrics_table.sort_values(by=\"f1_score\",ascending=False)\n",
+    "\n",
+    "balanced_metrics_df = balanced_metrics_table.sort_values(by=\"f1_score\",ascending=False)   \n",
+    "balanced_metrics_df"
+   ]
   }
  ],
  "metadata": {
