persist the model

--- a/dev/sepsis_prediction.ipynb
+++ b/dev/sepsis_prediction.ipynb
@@ -3130,6 +3130,428 @@
     "feat_df = pd.DataFrame(feature_importance, index=feature_names ,columns=[\"importance\"]).head(10)\n",
     "feat_df.sort_values(\"importance\",ascending=False).plot(kind=\"bar\",title=\"Feature Importance\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict On Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>PRG</th>\n",
+       "      <th>PL</th>\n",
+       "      <th>PR</th>\n",
+       "      <th>SK</th>\n",
+       "      <th>TS</th>\n",
+       "      <th>M11</th>\n",
+       "      <th>BD2</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Insurance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ICU200609</td>\n",
+       "      <td>1</td>\n",
+       "      <td>109</td>\n",
+       "      <td>38</td>\n",
+       "      <td>18</td>\n",
+       "      <td>120</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>0.407</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ICU200610</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108</td>\n",
+       "      <td>88</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  PRG   PL  PR  SK   TS   M11    BD2  Age  Insurance\n",
+       "0  ICU200609    1  109  38  18  120  23.1  0.407   26          1\n",
+       "1  ICU200610    1  108  88  19    0  27.1  0.400   24          1"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load Test Data\n",
+    "test_df = pd.read_csv(\"../Datasets/Paitients_Files_Test.csv\")\n",
+    "# preview data\n",
+    "test_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 169 entries, 0 to 168\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   ID         169 non-null    object \n",
+      " 1   PRG        169 non-null    int64  \n",
+      " 2   PL         169 non-null    int64  \n",
+      " 3   PR         169 non-null    int64  \n",
+      " 4   SK         169 non-null    int64  \n",
+      " 5   TS         169 non-null    int64  \n",
+      " 6   M11        169 non-null    float64\n",
+      " 7   BD2        169 non-null    float64\n",
+      " 8   Age        169 non-null    int64  \n",
+      " 9   Insurance  169 non-null    int64  \n",
+      "dtypes: float64(2), int64(7), object(1)\n",
+      "memory usage: 13.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check info about data\n",
+    "test_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Preprocess Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Plasma_Glucose</th>\n",
+       "      <th>Blood_Work_Result_1</th>\n",
+       "      <th>Blood_Pressure</th>\n",
+       "      <th>Blood_Work_Result_2</th>\n",
+       "      <th>Blood_Work_Result_3</th>\n",
+       "      <th>Body_Mass_Index</th>\n",
+       "      <th>Blood_Work_Result_4</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Insurance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ICU200609</td>\n",
+       "      <td>1</td>\n",
+       "      <td>109</td>\n",
+       "      <td>38</td>\n",
+       "      <td>18</td>\n",
+       "      <td>120</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>0.407</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ICU200610</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108</td>\n",
+       "      <td>88</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ICU200611</td>\n",
+       "      <td>6</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.7</td>\n",
+       "      <td>0.190</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ICU200612</td>\n",
+       "      <td>1</td>\n",
+       "      <td>124</td>\n",
+       "      <td>74</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ICU200613</td>\n",
+       "      <td>7</td>\n",
+       "      <td>150</td>\n",
+       "      <td>78</td>\n",
+       "      <td>29</td>\n",
+       "      <td>126</td>\n",
+       "      <td>35.2</td>\n",
+       "      <td>0.692</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  Plasma_Glucose  Blood_Work_Result_1  Blood_Pressure  \\\n",
+       "0  ICU200609               1                  109              38   \n",
+       "1  ICU200610               1                  108              88   \n",
+       "2  ICU200611               6                   96               0   \n",
+       "3  ICU200612               1                  124              74   \n",
+       "4  ICU200613               7                  150              78   \n",
+       "\n",
+       "   Blood_Work_Result_2  Blood_Work_Result_3  Body_Mass_Index  \\\n",
+       "0                   18                  120             23.1   \n",
+       "1                   19                    0             27.1   \n",
+       "2                    0                    0             23.7   \n",
+       "3                   36                    0             27.8   \n",
+       "4                   29                  126             35.2   \n",
+       "\n",
+       "   Blood_Work_Result_4  Age  Insurance  \n",
+       "0                0.407   26          1  \n",
+       "1                0.400   24          1  \n",
+       "2                0.190   28          1  \n",
+       "3                0.100   30          1  \n",
+       "4                0.692   54          0  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Rename columns in Dataset\n",
+    "new_col_names = {\n",
+    "    \"PRG\":\"Plasma_Glucose\",\n",
+    "    \"PL\":\"Blood_Work_Result_1\",\n",
+    "    \"PR\":\"Blood_Pressure\",\n",
+    "    \"SK\":\"Blood_Work_Result_2\",\n",
+    "    \"TS\":\"Blood_Work_Result_3\",\n",
+    "    \"M11\":\"Body_Mass_Index\",\n",
+    "    \"BD2\":\"Blood_Work_Result_4\",\n",
+    "}\n",
+    "\n",
+    "test_df.rename(columns = new_col_names,inplace=True)\n",
+    "\n",
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop the ID column\n",
+    "test_df.drop(columns=\"ID\",inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Plasma_Glucose         0\n",
+       "Blood_Work_Result_1    0\n",
+       "Blood_Pressure         0\n",
+       "Blood_Work_Result_2    0\n",
+       "Blood_Work_Result_3    0\n",
+       "Body_Mass_Index        0\n",
+       "Blood_Work_Result_4    0\n",
+       "Age                    0\n",
+       "Insurance              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for Nulls\n",
+    "test_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gradient_boost_prediction_result = gradient_boost_pipeline.predict(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Negative', 'Negative', 'Negative', 'Negative', 'Positive',\n",
+       "       'Positive', 'Negative', 'Positive', 'Negative', 'Positive',\n",
+       "       'Negative', 'Negative', 'Positive', 'Positive', 'Positive',\n",
+       "       'Positive', 'Negative', 'Negative', 'Negative', 'Positive',\n",
+       "       'Negative', 'Negative', 'Negative', 'Positive', 'Negative',\n",
+       "       'Negative', 'Negative', 'Negative', 'Positive', 'Positive',\n",
+       "       'Negative', 'Negative', 'Negative', 'Negative', 'Negative',\n",
+       "       'Negative', 'Negative', 'Negative', 'Negative', 'Positive',\n",
+       "       'Negative', 'Negative', 'Positive', 'Positive', 'Negative',\n",
+       "       'Negative', 'Positive', 'Positive', 'Positive', 'Negative',\n",
+       "       'Negative', 'Negative', 'Negative', 'Positive', 'Negative',\n",
+       "       'Negative', 'Positive', 'Negative', 'Positive', 'Negative',\n",
+       "       'Negative', 'Negative', 'Negative', 'Positive', 'Positive',\n",
+       "       'Negative', 'Negative', 'Negative', 'Negative', 'Positive',\n",
+       "       'Positive', 'Positive', 'Negative', 'Negative', 'Positive',\n",
+       "       'Negative', 'Positive', 'Positive', 'Negative', 'Negative',\n",
+       "       'Negative', 'Negative', 'Positive', 'Negative', 'Positive',\n",
+       "       'Negative', 'Positive', 'Negative', 'Negative', 'Negative',\n",
+       "       'Positive', 'Negative', 'Positive', 'Negative', 'Positive',\n",
+       "       'Negative', 'Positive', 'Positive', 'Negative', 'Positive',\n",
+       "       'Positive', 'Negative', 'Negative', 'Positive', 'Positive',\n",
+       "       'Negative', 'Negative', 'Negative', 'Negative', 'Positive',\n",
+       "       'Negative', 'Positive', 'Negative', 'Positive', 'Negative',\n",
+       "       'Negative', 'Positive', 'Positive', 'Negative', 'Negative',\n",
+       "       'Negative', 'Negative', 'Negative', 'Negative', 'Positive',\n",
+       "       'Positive', 'Negative', 'Negative', 'Positive', 'Positive',\n",
+       "       'Negative', 'Negative', 'Negative', 'Positive', 'Negative',\n",
+       "       'Negative', 'Negative', 'Negative', 'Negative', 'Negative',\n",
+       "       'Negative', 'Positive', 'Negative', 'Negative', 'Positive',\n",
+       "       'Positive', 'Negative', 'Positive', 'Negative', 'Positive',\n",
+       "       'Positive', 'Negative', 'Negative', 'Negative', 'Positive',\n",
+       "       'Positive', 'Positive', 'Positive', 'Negative', 'Negative',\n",
+       "       'Negative', 'Negative', 'Positive', 'Negative', 'Negative',\n",
+       "       'Negative', 'Negative', 'Positive', 'Negative'], dtype=object)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Decode Prediction Result\n",
+    "decoded_result = encoder.inverse_transform(gradient_boost_prediction_result)\n",
+    "decoded_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Persist the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_components = {\n",
+    "    \"encoder\":encoder,\n",
+    "    \"random_forest_classifier\":random_forest_pipeline,\n",
+    "    \"gradient_boost\":gradient_boost_pipeline\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('sepsis_model_components.joblib','wb') as file:\n",
+    "    joblib.dump(model_components, file)"
+   ]
   }
  ],
  "metadata": {
